<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/sync_folder_path_default"
        android:key="sync_folder_path"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sync_folder_path" />

    <EditTextPreference
        android:defaultValue="@string/my_folder_path_default"
        android:key="my_folder_path"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/my_folder_path" />

    <EditTextPreference
        android:defaultValue="@string/start_time_default"
        android:key="sync_start_time"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/start_time" />

    <EditTextPreference
        android:defaultValue="@string/sync_max_duration_min_default"
        android:key="sync_max_duration"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sync_max_duration_min" />

    <EditTextPreference
        android:defaultValue="@string/sync_alarm_cycle_hours_default"
        android:key="sync_alarm_cycle_hours"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sync_alarm_cycle_hours" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sync_test_folder"
        android:title="@string/sync_test_folder" />
</PreferenceScreen>